assets/css/style.css
:root {
  --black: black;
  --light-brown: #ffc000;
  --beige-wood: #e2ddd396;
  --beige: #ffdf7d;
  --green-leaf: #22d21f;
  --grey-shadow: #747272a0;
  --correct-answers: #20aa20;
  --bright-green: #22d21f;
  --faded-blue: #013553f9;
  --wrong-answer: #ff0000;
  --orange-button: #d83c00;
  --green-button: #8ab444;
  --white: #fff;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Space Mono', monospace, sans-serif;
  font-size: 1rem;
  color: var(--black);
  width: 100vw;
  height: 100vh;
  margin: 0 auto;
  max-width: 1600px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-image: url('../images/wooden-surface-medium.webp');
  background-position: left;
  background-repeat: no-repeat;
  background-size: cover;
}

/* navBar BAR */

#ham-bars {
  position: absolute;
  top: 0;
  left: 25px;
  margin-left: 2vw;
  font-size: 200%;
  color: var(--orange-button);
  cursor: pointer;
}

#ham-bars:hover {
  color: var(--green-leaf);
  transform: rotateY(180deg);
}

.navBar {
  height: 86vh;
  width: 0;
  position: fixed;
  z-index: 2;
  top: 0;
  left: 0;
  background: rgba(255, 255, 255, 0.8);
  overflow: hidden;
  transition: 0.8s;
  padding-top: 50px;
}

.navBar a {
  padding: 8px 8px 8px 32px;
  text-decoration: none;
  font-size: 150%;
  color: var(--orange-button);
  display: block;
  transition: 0.3s;
}

.navBar a:hover {
  color: var(--green-leaf);
}

.navBar .close-button {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 200%;
  margin-left: 50px;
}

/* About section */
.about-text {
  z-index: 10;
  position: absolute;
  top: 12vh;
  left: 12vw;
  width: 80%;
  max-width: 350px;
  background-color: #013553;
  color: var(--beige);
  padding: 1rem;
  border-radius: 1rem 2.4rem;
}
.close-about {
  position: absolute;
  text-align: right;
  font-size: 200%;
  float: right;
  top: 0;
  right: 0.8rem;
}

/* Header and Input section */
header {
  font-size: 100%;
  font-family: 'Concert One', cursive, sans-serif;
  font-weight: normal;
  text-align: center;
}

#user-name-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 20px;
}
input[type='email'],
textarea,
input[type='text'] {
  width: 100%;
  max-width: 300px;
  padding: 10px 15px;
  outline: none;
  border: none;
  border-radius: 4px;
}

#feedback-text {
  font-size: 140%;
  padding-bottom: 25px;
}

/*  Quiz area  */
#quiz-container {
  display: flex;
  flex-direction: column;
  max-width: 550px;
  width: 80%;
  margin-bottom: 6rem;
  padding: 15px;
  border-radius: 8px;
  color: var(--black);
  background-color: var(--beige-wood);
  box-shadow: 5px 10px 8px 10px #747272b7;
}

#answers-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
  margin: auto;
}

#question {
  display: flex;
  justify-content: center;
  background-color: var(--light-brown);
  border-radius: 8px;
  font-weight: bold;
  border: 4px ridge;
  color: var(--black);
  padding: 10px;
  font-size: 100%;
}

button.answer-button {
  justify-content: center;
  width: 70%;
  padding: 10px;
  border-radius: 8px;
  margin: 10px;
  outline: none;
  cursor: pointer;
  color: var(--black);
  font-weight: bold;
  background-color: var(--beige);
  box-shadow: 0px 6px #747272b7;
}
.answer-button:active {
  background-color: #f4c536;
  box-shadow: 0 3px #747272b7;
  transform: translateY(3px);
}

/* Control buttons  */
#control-buttons {
  display: flex;
}
.thank-you-back-home,
.contact-button button,
#start-button,
#reload-button,
#next-button {
  font-size: small;
  font-weight: bold;
  margin: 1rem auto;
  background-color: var(--light-brown);
  padding: 0.7rem;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  box-shadow: 0 6px #747272b7;
}
.contact-button button:active,
#start-button:active,
#reload-button:active,
#next-button:active {
  background-color: #20aa20;
  box-shadow: 0 3px #747272b7;
  transform: translateY(3px);
}
/* score card */

.score-card {
  display: flex;
  align-self: center;
  width: 100%;
  padding: 10px;
  line-height: 1;
  font-size: 15px;
}
.score-card p {
  align-self: center;
}

.score-card span {
  display: flex;
  align-self: center;
  background-color: var(--green-leaf);
  padding: 0.6rem;
  border: none;
  color: black;
  border-radius: 8px;
}

/* Modal  */
.alert-title {
  font-weight: bold;
  margin-bottom: 0.5rem;
  font-size: 2rem;
}

#modal-message {
  font-size: 1.25rem;
  position: absolute;
  display: none;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  padding: 2rem;
  background-color: var(--faded-blue);
  border-radius: 0.5rem;
  color: var(--bright-green);
}

#modal-message.active {
  display: block;
}

/*  Footer section */
footer {
  position: absolute;
  height: 14vh;
  z-index: 4;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(255, 255, 255, 0.8);
}
#center-social {
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 20px;
}
.social-links {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 5vh;
}

.social-links li {
  list-style: none;
  width: 3em;
}

.social-links i {
  font-size: 200%;
  color: var(--orange-button);
}

.social-links i:hover {
  color: var(--green-leaf);
}
.signature {
  display: flex;
  justify-content: center;
}

.signature span {
  font-size: 0.8rem;
  padding: 0.5rem;
  font-weight: bold;
  color: var(--grey-shadow);
}
/* Contact form */

.errors-container {
  background-color: #013553;
  max-width: 450px;
  width: 80%;
  border-radius: 1rem 2.5rem;
  padding-top: 0.5rem;
  padding-right: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1.5rem;
  color: var(--beige);
  margin-bottom: 1rem;
}

#form {
  margin: 0 auto;
  margin-bottom: 4rem;
  font-weight: bolder;
  text-align: center;
}

.error-title {
  margin: 0;
  margin-bottom: 0.5rem;
}

.errors-list {
  margin: 0;
  padding-left: 0.5rem;
}

.form-group {
  margin-bottom: 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.errors-container {
  display: none;
}

.errors-container.show {
  display: block;
}

/* Thank you html */

#form-thanks {
  text-align: center;
}
.thank-you-back-home {
  display: inline-block;
}
.thank-you-back-home a {
  text-decoration: none;
  color: black;
}

